Fixed profile layout bug

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -66,6 +66,14 @@
    padding-left: 20px;
 }
 
+.btn.btn-warning.basic-profile-btn {
+   color: black;
+   margin-top: 312px;
+   margin-left: 26px;
+   padding-right: 20px;
+   padding-left: 20px;
+}
+
 
 // User Index Page Styles
 
